[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/new_card_game/SageActionsMenu.gd" type="Script" id=1]

[node name="SageActionsMenu" type="PopupMenu"]
self_modulate = Color( 1, 1, 1, 0.294118 )
margin_right = 821.0
margin_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 750, 0 )
size_flags_horizontal = 3
hide_on_state_item_selection = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 813.0
margin_bottom = 85.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 813.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 9.0
margin_right = 813.0
margin_bottom = 81.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 2.0
margin_right = 7.0
margin_bottom = 72.0
rect_min_size = Vector2( 5, 0 )

[node name="FieldButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 11.0
margin_right = 186.0
margin_bottom = 72.0
grow_horizontal = 2
rect_min_size = Vector2( 175, 67 )
focus_mode = 1
enabled_focus_mode = 1
text = "Beit Midrash"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 190.0
margin_right = 215.0
margin_bottom = 72.0
rect_min_size = Vector2( 25, 0 )

[node name="TimelineButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 219.0
margin_right = 394.0
margin_bottom = 72.0
grow_horizontal = 2
rect_min_size = Vector2( 175, 67 )
focus_mode = 1
text = "TIMELINE"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 398.0
margin_right = 423.0
margin_bottom = 72.0
rect_min_size = Vector2( 25, 0 )

[node name="ChallengeButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 427.0
margin_right = 602.0
margin_bottom = 72.0
grow_horizontal = 2
rect_min_size = Vector2( 175, 67 )
text = "CHALLENGE"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 606.0
margin_right = 631.0
margin_bottom = 72.0
rect_min_size = Vector2( 25, 0 )

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 635.0
margin_right = 810.0
margin_bottom = 72.0
grow_horizontal = 2
rect_min_size = Vector2( 175, 0 )
text = "CANCEL"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 85.0
margin_right = 813.0
margin_bottom = 85.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer/FieldButton" to="." method="_on_FieldButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TimelineButton" to="." method="_on_TimelineButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ChallengeButton" to="." method="_on_ChallengeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
